# cdctool

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cdctool.pc.in  config.h.in  configure  configure.in  gnulib.sh
gnulib/: .gitignore  Makefile.in
lib/: CDC_baudrate.c  CDC_baudrate.h  CDC_close.c  CDC_close.h  CDC_discover.c  CDC_discover.h  CDC_file.h  CDC_flowcontrol.c  CDC_flowcontrol.h  CDC_linebuffer.c  CDC_linebuffer.h  CDC_open.c  CDC_open.h  CDC_parity.c  CDC_parity.h  CDC_read.c  CDC_read.h  CDC_stopbits.c  CDC_stopbits.h  CDC_string.c  CDC_string.h  CDC_wordsize.c  CDC_wordsize.h  CDC_write.c  CDC_write.h  Doxyfile  Makefile.am  Makefile.in  cdc.c++  cdc.h  cdc.h++
m4/: .gitignore  gnulib-cache.m4
