#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.6])

AC_INIT([cdctool], [0.0.5], [fletch@fletchtronics.net])

AC_CONFIG_SRCDIR([bin/CDC_tool.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
DX_INIT_DOXYGEN
DX_DOXYGEN_FEATURE(ON)
DX_HTML_FEATURE(ON)
DX_MAN_FEATURE(ON)

# Configuration.
CFLAGS="$CFLAGS -Wall"
CDC_PC_CFLAGS="-Wall"
CDC_PC_LDFLAGS="-lcdctool"

# Checks for programs.
AC_PROG_CC
gl_EARLY
gl_INIT
AM_PROG_CC_C_O
AC_PROG_LIBTOOL

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h stdio.h popt.h])

# Checks for libraries.
AC_CHECK_LIB([popt], [poptGetContext], [
  POPT="-lpopt"
], [
  echo
  echo "FATAL: Cannot find popt. It is needed to build cdctool."
  echo
  exit -1
])
AC_SUBST([POPT])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_SUBST([CDC_PC_CFLAGS])
AC_SUBST([CDC_PC_LDFLAGS])

AC_CONFIG_FILES([
  Makefile
  cdctool.pc
  bin/Makefile
  lib/Makefile
  gnulib/Makefile
])
AC_OUTPUT
